--- a/.docker/docker-compose.yaml
+++ b/.docker/docker-compose.yaml
@@ -18,4 +18,4 @@ services:
     ipc: host  # Add this for X11 shared memory
     stdin_open: true  # Enable stdin
     tty: true        # Enable terminal
-    command: python3 scripts/main.py
+    command: bash -c "python3 /app/scripts/main.py"
