--- a/.docker/docker-compose.yaml
+++ b/.docker/docker-compose.yaml
@@ -20,5 +20,12 @@ services:
     tty: true        # Enable terminal
     command: bash -c "python3 /app/scripts/viz.py"
 
-  calc_intrinsics:
-      user: "${UID:-1000}:${GID:-1000}"
+
+  calibration:
+    user: "${UID:-1000}:${GID:-1000}"
+    build:
+      context: ..
+      dockerfile: .docker/Dockerfile
+    volumes:
+      - ..:/app
+    command: bash -c "python3 /app/scripts/get_intrinsics.py"
